--- a/public/index.html
+++ b/public/index.html
@@ -7,5 +7,7 @@
   </head>
   <body>
     <div id="root"></div>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&display=swap" rel="stylesheet">
+
   </body>
 </html>
